--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,6 +94,7 @@ a {
   font-size: 0.9rem;
   margin: 0.5em 4px;
   text-decoration: none;
+  display: inline-block;
 }
 
 #banner-txt {
@@ -106,10 +107,12 @@ a {
   color:#183876;
 }
 
+
+
 #key-features {
   text-align: center;
   margin-bottom: 1em;
-  font: 500 31px/0.2px Raleway;
+  font: 500 31px Raleway;
   color: #000;
 }
 
@@ -143,7 +146,7 @@ a {
 }
 
 .keyfeature .icon {
-  font-size: 2.6em;
+  font-size: 2.2em;
   color: #000;
   width: 80px;
   height: 80px;
@@ -180,6 +183,8 @@ a {
   align-items: center;
   padding: 2rem;
 }
+
+
 
 .logo-idp {
   width: 123px;
@@ -341,20 +346,39 @@ a {
 
 .pricing-btn {
   background: #28424f !important;
-  font-size: 16px;
+  font-size: 16px !important;
   white-space: break-spaces;
-  transition: 0.5s;
-  display: table-cell;
+  transition: 0.5s !important;
+  display: table-cell !important;
   color: #fff !important;
-  font-weight: 700;
+  font-weight: 700 !important;
   letter-spacing: 2px;
 }
+.pricing-btn:hover{
+  transform: scale(1.03);
+}
+#rcorners2{
+  border: 2px solid #fff;
+  border-radius: 10px;
+}
+.tooltip-text{
+  background-color: #000;
+    color: #fff;
+    padding: 5px;
+    position: absolute;
+    font-size: 0.7rem;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    border-radius: 4px;
+    font-family: sans-serif;
+}
+
 
 .review-box {
   border: 7px solid #aadee3;
   border-radius: 15px;
   margin: 10px 8px;
-  height: 300px;
+  height: auto;
 }
 
 .carousel-item {
@@ -450,11 +474,14 @@ a {
 
 .custom-section-head {
   font-size: 17px;
+  font-family: Raleway;
+  font-weight: 500;
 }
 
 .custom-section-desc {
   font-size: 14px;
 }
+
 
 .rcorners {
   border-radius: 15px 15px 0px 0px;
@@ -521,9 +548,16 @@ a {
 }
 .wp-idp-pricing-label{
   font-size: 14px;
-    font-weight: 600 !important;
+    font-weight: 590 !important;
     font-family: 'Raleway';
     margin-top: 9px;
+    letter-spacing: 0.4px;
+}
+.wp-idp-price{
+  font:600 1.6rem sans-serif;
+}
+.idp-table-border{
+  border-bottom: 1px solid #dfdfdf;
 }
 .faq-item {
   background-color: transparent;
@@ -611,7 +645,7 @@ border: 0.5px solid #ececec;
    display:block;
  }
  .idp-int-logo{
-   width: 9rem;
+   width: 6rem;
    margin-top:1.5rem;
  }
  .card__inner{
@@ -628,11 +662,24 @@ border: 0.5px solid #ececec;
      left:0rem;
      top:0rem;
  }
+ .banner-image{
+  width:19rem;
+  height: 19rem;
+} 
+.main,.review-carousel{
+  display: none !important;
+} 
+#pricing{
+  overflow: scroll;
+}
 }
 @media screen and (min-width:767px) and (max-width:1024px){
     .card__section{
         margin-bottom:5rem;
         margin-top:12rem;
+    }
+    .main,.review-carousel{
+      display: none;
     }
 }
 @media screen and (min-width:769px) and (max-width:1025px){
@@ -648,8 +695,20 @@ border: 0.5px solid #ececec;
     width: 362px!important;
     }
     .svg-img2{
-    top:-26.8rem!important;
-}
+    top:-26.8rem!important;  
+  }
+  .banner-image{
+    width:19rem;
+    height: 19rem;
+  }
+  .banner-idp{
+    padding: 2rem 2rem 1rem !important;
+  }
+  .logo-idp{
+    width: 115px;
+    height: 109px;
+    margin: 0 10px;
+  }
 }
 @media screen and (min-width:1025px) and (max-width:1229px){
     .card__body p {
@@ -864,4 +923,22 @@ textarea,input[type="email"]{
 }
 .idp-inner-table{
   padding: 0 40px;
+}
+.pr-row{
+  padding: 10px !important;
+}
+.wp-idp-pricing-dropdown{
+  border: 2px solid whitesmoke;
+}
+@media screen and (min-width:1025px) and (max-width:1441px) {
+  .banner-image{
+    width: 26rem;
+    height: 22rem;
+  }  
+  .banner-idp{
+    padding: 2rem !important;
+  }
+  .main{
+    flex-wrap:wrap ;
+  }
 }
